--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <img src="IMG-20250115-WA0021.jpg" alt="Logo Event Firdaous" style="height: 80px;">
+      <img src="image/IMG-20250115-WA0021.jpg" alt="Logo Event Firdaous" style="height: 80px;">
     </div>
     <div class="header-info">
       <h1 class="animated-title">EVENT FIRDAOUS</h1>
@@ -29,15 +29,15 @@
     <p>Nous sommes là pour rendre vos événements extraordinaires. Découvrez notre large gamme de services, comprenant l'organisation de mariages, soirées privées, décoration, photographie et vidéographie.</p>
     <div class="services-grid">
       <div class="service">
-        <img src="IMG-20250115-WA0023.jpg" alt="Réception de rêve" style="width: 100%; height: auto; border-radius: 10px;">
+        <img src="image/IMG-20250115-WA0023.jpg" alt="Réception de rêve" style="width: 100%; height: auto; border-radius: 10px;">
         <h3>Réception de rêve</h3>
       </div>
       <div class="service">
-        <img src="IMG-20250115-WA0008.jpg" alt="Planification parfaite" style="width: 100%; height: auto; border-radius: 10px;">
+        <img src="image/IMG-20250115-WA0008.jpg" alt="Planification parfaite" style="width: 100%; height: auto; border-radius: 10px;">
         <h3>Planification parfaite</h3>
       </div>
       <div class="service">
-        <img src="IMG-20250115-WA0006.jpg" alt="Mariages uniques" style="width: 100%; height: auto; border-radius: 10px;">
+        <img src="image/IMG-20250115-WA0006.jpg" alt="Mariages uniques" style="width: 100%; height: auto; border-radius: 10px;">
         <h3>Mariages uniques</h3>
       </div>
     </div>
@@ -82,19 +82,19 @@
     <h2>Événements privés inoubliables</h2>
     <div class="private-grid">
       <div class="event">
-        <img src="IMG-20250115-WA0018.jpg" alt="Célébrations sur mesure" style="width: 100%; height: auto; border-radius: 10px;">
+        <img src="image/IMG-20250115-WA0018.jpg" alt="Célébrations sur mesure" style="width: 100%; height: auto; border-radius: 10px;">
         <h3>Célébrations sur mesure</h3>
       </div>
       <div class="event">
-        <img src="IMG-20250115-WA0022.jpg" alt="Anniversaire parfait" style="width: 100%; height: auto; border-radius: 10px;">
+        <img src="image/IMG-20250115-WA0022.jpg" alt="Anniversaire parfait" style="width: 100%; height: auto; border-radius: 10px;">
         <h3>Anniversaire parfait</h3>
       </div>
       <div class="event">
-        <img src="IMG-20250115-WA0002.jpg" alt="Moments magiques" style="width: 100%; height: auto; border-radius: 10px;">
+        <img src="image/IMG-20250115-WA0002.jpg" alt="Moments magiques" style="width: 100%; height: auto; border-radius: 10px;">
         <h3>Moments magiques</h3>
       </div>
       <div class="event">
-        <img src="IMG-20250115-WA0015.jpg" alt="Organisation complète" style="width: 100%; height: auto; border-radius: 10px;">
+        <img src="image/IMG-20250115-WA0015.jpg" alt="Organisation complète" style="width: 100%; height: auto; border-radius: 10px;">
         <h3>Organisation complète</h3>
       </div>
     </div>
@@ -104,11 +104,11 @@
     <h2>Art Visuel et Moments Précieux</h2>
     <div class="art-grid">
       <div>
-        <img src="IMG-20250115-WA0010.jpg" alt="Art Visuel" style="width: 100%; height: auto; border-radius: 10px;">
+        <img src="image/IMG-20250115-WA0010.jpg" alt="Art Visuel" style="width: 100%; height: auto; border-radius: 10px;">
         <p>Chaque détail est soigneusement pensé pour créer une ambiance unique.</p>
       </div>
       <div>
-        <img src="IMG-20250115-WA0014.jpg" alt="Capture Émotion" style="width: 100%; height: auto; border-radius: 10px;">
+        <img src="image/IMG-20250115-WA0014.jpg" alt="Capture Émotion" style="width: 100%; height: auto; border-radius: 10px;">
         <p>Nos services immortalisent chaque moment précieux.</p>
       </div>
     </div>
