--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="event firdaous dj Activation des enfants Children's activation تنشيط الاطفال  Organisation de tous les événements Organization of all events تنظيم جميع المناسبات والا فراح anniversaires birthdaysاعياد الميلاد ">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Event Firdaous: Specialists in event planning in Morocco. Make your celebrations unforgettable! | تنظيم المناسبات والأفراح في المغرب. جعل احتفالك لحظة لا تُنسى! | Spécialistes de l'organisation d'événements au Maroc. Rendez vos célébrations inoubliables !">
+    <meta name="keywords" content="Event planning in Morocco, تنظيم المناسبات في المغرب, Organisation d'événements au Maroc">
+    <meta name="geo.region" content="MA" />
+    <meta name="geo.placename" content="Morocco" />
+    <meta name="geo.position" content="31.7917;-7.0926" />
+    <meta property="og:title" content="Event Firdaous - Specialists in Event Planning">
+    <meta property="og:description" content="We organize unforgettable events in Morocco. Contact us for weddings, parties, and more!">
+    <meta property="og:image" content="image/IMG-20250115-WA0021.jpg">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:locale:alternate" content="fr_FR">
+    <meta property="og:locale:alternate" content="ar_MA">
+    <title>Event Firdaous - Organizing Memorable Events</title>
+  </head>
   
-
-
-  <title>Event Firdaous</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
 <body>
   <header class="header">
     <div class="logo">
       <img src="image/IMG-20250115-WA0021.jpg" alt="Logo Event Firdaous" style="height: 80px;">
     </div>
     <div class="header-info">
+      
       <h1 class="animated-title">EVENT FIRDAOUS</h1>
       <div class="contact">
         <a href="tel:+212662416040">+212 662-416040</a>
-        <a href="tel:+212611195516">+212 611-195516</a>
       </div>
     </div>
   </header>
@@ -118,7 +125,7 @@
     <div class="contact-info">
       <p><strong>Gérant :</strong> Mr. Reda Elmouloua</p>
       <p><strong>Email :</strong> reda.elmouloua@gmail.com</p>
-      <p><strong>Téléphone :</strong> +212 662-416040 / +212 611-195516</p>
+      <p><strong>Téléphone :</strong> +212 662-416040 </p>
     </div>
     <div class="social-links">
 
