--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <meta property="og:locale" content="en_US">
     <meta property="og:locale:alternate" content="fr_FR">
     <meta property="og:locale:alternate" content="ar_MA">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Event Firdaous - Organizing Memorable Events</title>
   </head>
   
@@ -131,7 +133,6 @@
 
 
 
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 <a href="https://wa.me/+212 662-416040" target="_blank" style="
     display: inline-block;
